--- a/index.html
+++ b/index.html
@@ -215,11 +215,13 @@ Chef Heroes &copy;<script>document.write(new Date().getFullYear());</script> By 
 						html = html + 
 							'<div class="blog_items">'+
 								'<div class="blog_img_box">'+
-									'<img style="width:350px; height: 214px;" class="img-fluid" src="'+result[i].picture+'" alt="">'+
+									'<img style="width:345px; height: 200px;" class="img-fluid" src="'+result[i].picture+'" alt="">'+
 								'</div>'+
 								'<div class="blog_content">'+
 									'<a class="title" href="Detalle.html?ID='+(i+1)+'">'+result[i].name+'</a>'+
-									'<p style="font-size: 6px">'+result[i].info+'</p>'+
+									
+									'<p style="width:340px; height: 200px;">'+result[i].info+'</p>'+
+									
 									'<p>'+result[i].publisher+'</p>'+
 									'<div class="date">'+
 										'<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>'+
