--- a/index.html
+++ b/index.html
@@ -106,145 +106,104 @@
 			</div>
 		</div>
 	</section>
-	<!--================Start About Us Area =================-->
+	<footer class="footer_area section_gap_top">
+		<div class="container">
+			<div class="row footer_inner">
+				<div class="col-lg-3 col-sm-6">
+					<aside class="f_widget ab_widget">
 
 
-	<!--================End About Us Area =================-->
+					</aside>
+				</div>
+				<div class="col-lg-3 col-sm-6">
 
-	<!--================First Upcoming Games Area =================-->
+				</div>
+				<div class="col-lg-3 col-sm-6">
 
-	<!--================End Upcoming Games Area =================-->
+				</div>
+				<div class="col-lg-3 col-sm-6">
 
-	<!--================Start Recent Update Area =================-->
-
-	<!--================End Recent Update Area =================-->
-
-
-	<!--================ Start Gallery Area =================-->
-
-	<!--================ End Gallery Area =================-->
-
-
-	<!--========== Start Testimonials Area ==================-->
-
-	<!--================ End Testimonials Area ================-->
-
-
-	<!--================ Start Pricing Plans Area ================-->
-
-
-	<!--================ End Pricing Plans Area ================-->
-
-
-	<!--================ Start Frequently Asked Questions Area ================-->
-	< <!--================End Frequently Asked Questions Area================-->
-
-		<!--================ Start Blog Area ================-->
-
-		<!--================ End Blog Area ================-->
-
-		<!--================ Start Newsletter Area ================-->
-
-		<!--================ End Newsletter Area ================-->
-
-		<!--================Footer Area =================-->
-		<footer class="footer_area section_gap_top">
-			<div class="container">
-				<div class="row footer_inner">
-					<div class="col-lg-3 col-sm-6">
-						<aside class="f_widget ab_widget">
-
-
-						</aside>
-					</div>
-					<div class="col-lg-3 col-sm-6">
-
-					</div>
-					<div class="col-lg-3 col-sm-6">
-
-					</div>
-					<div class="col-lg-3 col-sm-6">
-
+				</div>
+			</div>
+			<div class="row single-footer-widget">
+				<div class="col-lg-6 col-md-6 col-sm-12">
+					<div class="copy_right_text">
+						<p>
+							Chef Heroes &copy;
+							<script>document.write(new Date().getFullYear());</script> By : Sergio Bedoya <i
+								class="fa fa-heart-o" aria-hidden="true"></i>
+						</p>
 					</div>
 				</div>
-				<div class="row single-footer-widget">
-					<div class="col-lg-6 col-md-6 col-sm-12">
-						<div class="copy_right_text">
-							<p>
-								Chef Heroes &copy;
-								<script>document.write(new Date().getFullYear());</script> By : Sergio Bedoya <i
-									class="fa fa-heart-o" aria-hidden="true"></i>
-							</p>
-						</div>
-					</div>
-					<div class="col-lg-6 col-md-6 col-sm-12">
-						<div class="social_widget">
-							<a href="#"><i class="fa fa-github"></i></a>
+				<div class="col-lg-6 col-md-6 col-sm-12">
+					<div class="social_widget">
+						<a href="#"><i class="fa fa-github"></i></a>
 
-						</div>
 					</div>
 				</div>
 			</div>
-		</footer>
-		<!--================End Footer Area =================-->
+		</div>
+	</footer>
+	<!--================End Footer Area =================-->
 
-		<!-- Optional JavaScript -->
-		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="js/jquery-3.2.1.min.js"></script>
-		
-		<script src="js/popper.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/stellar.js"></script>
-		<script src="js/paginator.js"></script>
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
-		<script src="vendors/isotope/imagesloaded.pkgd.min.js"></script>
-		<script src="vendors/isotope/isotope-min.js"></script>
-		<script src="vendors/owl-carousel/owl.carousel.min.js"></script>
-		<script src="js/jquery.ajaxchimp.min.js"></script>
-		<script src="vendors/counter-up/jquery.waypoints.min.js"></script>
-		<script src="vendors/counter-up/jquery.counterup.min.js"></script>
-		<script src="js/mail-script.js"></script>
-		<!--gmaps Js-->
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-		<script src="js/gmaps.min.js"></script>
-		<script src="js/theme.js"></script>
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.4.1/jquery-migrate.min.js"></script>
+	
+	<script src="js/popper.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/stellar.js"></script>
+	<script src="js/paginator.js"></script>
+	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
+	<script src="vendors/isotope/imagesloaded.pkgd.min.js"></script>
+	<script src="vendors/isotope/isotope-min.js"></script>
+	<script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+	<script src="js/jquery.ajaxchimp.min.js"></script>
+	<script src="vendors/counter-up/jquery.waypoints.min.js"></script>
+	<script src="vendors/counter-up/jquery.counterup.min.js"></script>
+	<script src="js/mail-script.js"></script>
+	<!--gmaps Js-->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+	<script src="js/gmaps.min.js"></script>
+	<script src="js/theme.js"></script>
 
 
-		<script>
-			$(function () {
+	<script>
+		$(function () {
 
-				$.getJSON("Data.json", function (result) {
-					if (result.length > 0) {
-						var html = "";
-						for (var i = 0; i < result.length; i++) {
-							html +=
-								'<div class="blog_items">' +
-								'<div class="blog_img_box">' +
-								'<img style="width:345px; height: 200px;" class="img-fluid" src="' + result[i].picture + '" alt="">' +
-								'</div>' +
-								'<div class="blog_content">' +
-								'<a class="title" href="Detalle.html?ID=' + (i + 1) + '">' + result[i].name + '</a>' +
+			$.getJSON("Data.json", function (result) {
+				if (result.length > 0) {
+					var html = "";
+					for (var i = 0; i < result.length; i++) {
+						html +=
+							'<div class="blog_items">' +
+							'<div class="blog_img_box">' +
+							'<img style="width:345px; height: 200px;" class="img-fluid" src="' + result[i].picture + '" alt="">' +
+							'</div>' +
+							'<div class="blog_content">' +
+							'<a class="title" href="Detalle.html?ID=' + (i + 1) + '">' + result[i].name + '</a>' +
 
-								'<p style="width:340px; height: 200px;">' + result[i].info + '</p>' +
+							'<p style="width:340px; height: 200px;">' + result[i].info + '</p>' +
 
-								'<p>' + result[i].publisher + '</p>' +
-								'<div class="date">' +
-								'<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>' +
-								'<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>' +
-								'</div>' +
-								'</div>' +
-								'</div>';
-						}
-						$("#Personajes").html(html);
-
-						$("#Personajes").jPaginate({ items: 9 });
+							'<p>' + result[i].publisher + '</p>' +
+							'<div class="date">' +
+							'<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>' +
+							'<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>' +
+							'</div>' +
+							'</div>' +
+							'</div>';
 					}
-				});
+					$("#Personajes").html(html);
+
+					$("#Personajes").jPaginate({ items: 9 });
+				}
+			});
 
 
-			});		
-		</script>
+		});		
+	</script>
 
 </body>
 
